.bundle/ruby/2.4.0/extensions/x86_64-linux/2.4.0/json-1.8.3/gem_make.out
current directory: /home/jekahwati/Documentos/workspaceRoR/archdailytask/archdaily_task/.bundle/ruby/2.4.0/gems/json-1.8.3/ext/json/ext/generator
/home/jekahwati/.rvm/rubies/ruby-2.4.1/bin/ruby -r ./siteconf20180212-26725-16nsyrt.rb extconf.rb
creating Makefile

current directory: /home/jekahwati/Documentos/workspaceRoR/archdailytask/archdaily_task/.bundle/ruby/2.4.0/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR=" clean

current directory: /home/jekahwati/Documentos/workspaceRoR/archdailytask/archdaily_task/.bundle/ruby/2.4.0/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR="
compiling generator.c
generator.c: In function ‘generate_json’:
generator.c:861:25: error: ‘rb_cFixnum’ undeclared (first use in this function)
     } else if (klass == rb_cFixnum) {
                         ^
generator.c:861:25: note: each undeclared identifier is reported only once for each function it appears in
generator.c:863:25: error: ‘rb_cBignum’ undeclared (first use in this function)
     } else if (klass == rb_cBignum) {
                         ^
generator.c: At top level:
cc1: warning: unrecognized command line option ‘-Wno-self-assign’
cc1: warning: unrecognized command line option ‘-Wno-constant-logical-operand’
cc1: warning: unrecognized command line option ‘-Wno-parentheses-equality’
cc1: warning: unrecognized command line option ‘-Wno-tautological-compare’
Makefile:241: fallo en las instrucciones para el objetivo 'generator.o'
make: *** [generator.o] Error 1

make failed, exit code 2
